--- a/EDA and Statistics.ipynb
+++ b/EDA and Statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "99972f25",
+   "id": "d6e3c45d",
    "metadata": {},
    "source": [
     "# Exploratory Data Aanlysis\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "713fe548",
+   "id": "2878c6ed",
    "metadata": {},
    "source": [
     "Exploratory data analysis is divided into 3 different types of analysis:\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f8781e3d",
+   "id": "a4afa0a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8dca1f92",
+   "id": "b4cce2b4",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4869481c",
+   "id": "5ecd3ffb",
    "metadata": {},
    "source": [
     "## 1. Univariate Analysis"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5532a06",
+   "id": "44013951",
    "metadata": {},
    "source": [
     "The objective of univariate analysis is to explore each variable separately and summarize it, and analyze the pattern present in it.\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "210d658f",
+   "id": "68245dd5",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d36865e2",
+   "id": "988c0cef",
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +157,17 @@
     "values in a continuous variable. Swarm-plot spreads out the data points of the \n",
     "variable automatically to avoid overlapping.\n",
     "'''\n",
-    "fig = sns.swarmplot(x=df['sepal_width'])"
+    "fig = sns.swarmplot(x=df['sepal_width'])\n",
+    "\n",
+    "'''\n",
+    "Most of the values lies between 2.5 to 3.8. There can be some potential outliers.\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "613e4069",
+   "id": "f099686c",
    "metadata": {},
    "outputs": [
     {
@@ -200,13 +204,15 @@
     "\n",
     "fig = sns.distplot(df['petal_width'], bins=10, kde = True,\n",
     "                  color='red', vertical=False, \n",
-    "                  axlabel='distribution of petal_width')"
+    "                  axlabel='distribution of petal_width')\n",
+    "\n",
+    "# The petal width moslty lie between 0.2 to 2.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fd8162e6",
+   "id": "3cbf5a35",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b13b8eb",
+   "id": "6de963bc",
    "metadata": {},
    "source": [
     "![](https://miro.medium.com/max/628/1*FPnhYs6cs3ipUKIZhl9caA.png)"
@@ -241,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec705493",
+   "id": "f9517bab",
    "metadata": {},
    "source": [
     "The empirical rule, or the 68-95-99.7 rule, tells you where your values lie:\n",
@@ -256,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6af1296",
+   "id": "981ee4b1",
    "metadata": {},
    "source": [
     "![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Boxplot_vs_PDF.svg/800px-Boxplot_vs_PDF.svg.png)"
@@ -265,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4c549aec",
+   "id": "58389f36",
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +288,15 @@
    "source": [
     "sns.set(rc = {'figure.figsize': (9, 9)})\n",
     "# fig = sns.boxplot(df['sepal_width'])\n",
-    "fig = sns.boxplot(x='variable', y='value', data=pd.melt(df))"
+    "fig = sns.boxplot(x='variable', y='value', data=pd.melt(df))\n",
+    "\n",
+    "# Sepal width has some outliers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aadcfab7",
+   "id": "78316ab2",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1747d5c4",
+   "id": "1669a63d",
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +444,15 @@
     "the length of the bar.\n",
     "'''\n",
     "sns.set(rc={'figure.figsize': (6, 6)})\n",
-    "fig = sns.countplot(df['species'])"
+    "fig = sns.countplot(df['species'])\n",
+    "\n",
+    "# There are 50 observation for each species "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1c544d32",
+   "id": "66bc048a",
    "metadata": {},
    "outputs": [
     {
@@ -462,12 +472,14 @@
     "'''\n",
     "plt.figure(figsize=(5, 5))\n",
     "plt.pie(df['species'].value_counts(), autopct='%.2f', labels=['Setosa', 'Versicolor', 'Virginica'])\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# 33.3% of each species"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "845ba51a",
+   "id": "7025fb16",
    "metadata": {},
    "source": [
     "## 2. Bivariate Analysis\n",
@@ -476,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f367c63",
+   "id": "03792076",
    "metadata": {},
    "source": [
     "![](https://editor.analyticsvidhya.com/uploads/78011Picture3.png)"
@@ -484,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3118fb",
+   "id": "35d17fc1",
    "metadata": {},
    "source": [
     "### Continuous Vs Continuous\n",
@@ -495,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "af866983",
+   "id": "2560030f",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "77118bb5",
+   "id": "d4f701f1",
    "metadata": {},
    "outputs": [
     {
@@ -539,12 +551,14 @@
     "\n",
     "fig = sns.lineplot(x=df[\"petal_length\"], y=df[\"petal_width\"], ci=None)\n",
     "# Passing the entire dataset in long-form mode will aggregate over repeated \n",
-    "# values (each year) to show the mean and 95% confidence interval:"
+    "# values (each year) to show the mean and 95% confidence interval:\n",
+    "\n",
+    "# Petal length increases with increase of petal width."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eed88554",
+   "id": "58e93b91",
    "metadata": {},
    "source": [
     "### Continuous Vs Categorical\n",
@@ -557,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "912662af",
+   "id": "0928abbe",
    "metadata": {},
    "outputs": [
     {
@@ -574,13 +588,15 @@
    "source": [
     "# Swarm plot\n",
     "\n",
-    "fig = sns.swarmplot(x=df['species'], y=df['sepal_width'])"
+    "fig = sns.swarmplot(x=df['species'], y=df['sepal_width'])\n",
+    "\n",
+    "# species 0 has higher sepal width followed by species 2 then by species 1 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "558ec4f6",
+   "id": "95592dd2",
    "metadata": {},
    "outputs": [
     {
@@ -595,13 +611,15 @@
     }
    ],
    "source": [
-    "fig = sns.stripplot(x=df['species'], y=df['sepal_width'])"
+    "fig = sns.stripplot(x=df['species'], y=df['sepal_width'])\n",
+    "\n",
+    "# Stripplot is same as swarmplot but it has data points overlap"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7995395d",
+   "id": "a330c2ce",
    "metadata": {},
    "outputs": [
     {
@@ -618,13 +636,15 @@
    "source": [
     "# Box plot\n",
     "\n",
-    "fig = sns.boxplot(x='species', y='sepal_width', data=df, palette='deep')"
+    "fig = sns.boxplot(x='species', y='sepal_width', data=df, palette='deep')\n",
+    "\n",
+    "# Showing the same info from the swarmplot but also showing median and outliers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "33e9b2ef",
+   "id": "174b65cd",
    "metadata": {},
    "outputs": [
     {
@@ -639,12 +659,14 @@
     }
    ],
    "source": [
-    "ax = sns.barplot(x=\"species\", y=\"sepal_width\", data=df)"
+    "ax = sns.barplot(x=\"species\", y=\"sepal_width\", data=df)\n",
+    "\n",
+    "# Species 0 has higher sepal width followed by species 2."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a4d6d30e",
+   "id": "c0ac1a03",
    "metadata": {},
    "source": [
     "### Categorical Vs Categorical\n",
@@ -656,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "51231600",
+   "id": "c3bb2758",
    "metadata": {
     "scrolled": false
    },
@@ -935,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cdcdf034",
+   "id": "6a7f7cb5",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "86a33a11",
+   "id": "a041e29d",
    "metadata": {},
    "outputs": [
     {
@@ -1125,13 +1147,13 @@
     "print('normal with margin:\\n', pd.crosstab(df2['Item_Fat_Content'], df2['Outlet_Size'], margins = True))\n",
     "pd.crosstab(df2['Item_Fat_Content'], df2['Outlet_Size'], normalize = True).style.format('{:.2%}')\n",
     "\n",
-    "# print(pd.crosstab(df2['Item_Fat_Content'], [df2['Outlet_Size'], df2['Item_Type']]))"
+    "# Low Fat with medium and small size have more occurence simultaneously"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2e91029b",
+   "id": "bcf13e9d",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6424805d",
+   "id": "0502a68a",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fa0ce052",
+   "id": "16b3f21a",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba42b86f",
+   "id": "483727a4",
    "metadata": {},
    "source": [
     "### MultiVariate Analysis\n",
@@ -1417,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cb36b9a1",
+   "id": "472346d9",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a77e6b11",
+   "id": "68a1a571",
    "metadata": {},
    "outputs": [
     {
@@ -1629,13 +1651,15 @@
     "g = sns.PairGrid(penguins, hue=\"species\")\n",
     "g.map_diag(sns.histplot)\n",
     "g.map_offdiag(sns.scatterplot)\n",
-    "fig = g.add_legend()"
+    "fig = g.add_legend()\n",
+    "\n",
+    "#Gentoo species have small bill_length and more body mass and more flipper_length "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0a467109",
+   "id": "70b3b13c",
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "09d26d2e",
+   "id": "8c31cd72",
    "metadata": {
     "scrolled": false
    },
@@ -1685,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d6be493d",
+   "id": "e4ccfffe",
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d4dcdde9",
+   "id": "14db62f3",
    "metadata": {
     "scrolled": false
    },
@@ -1743,7 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5f5923b5",
+   "id": "41dfe122",
    "metadata": {},
    "outputs": [
     {
@@ -1767,13 +1791,15 @@
     "    palette='bright',\n",
     "    kind='bar',\n",
     "    hue='sex',\n",
-    "    aspect=1.5);"
+    "    aspect=1.5);\n",
+    "\n",
+    "# There are more male than the females in every species."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "db62255a",
+   "id": "38bddd74",
    "metadata": {},
    "outputs": [
     {
