added some comments

--- a/Basic_Statistics.ipynb
+++ b/Basic_Statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "69fe4fe9",
+   "id": "7c961813",
    "metadata": {},
    "source": [
     "### Variance, Standard Deviation, Covariance"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "982136d6",
+   "id": "b2520daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d3a567be",
+   "id": "3102a69f",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91fbb8e0",
+   "id": "96b8864a",
    "metadata": {},
    "source": [
     "### Variance :\n",
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "49b5711c",
+   "id": "550811b0",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d95503",
+   "id": "ba6b7053",
    "metadata": {},
    "source": [
     "### Covariance\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a95515e6",
+   "id": "6435f366",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "203e5246",
+   "id": "b73d70bb",
    "metadata": {},
    "outputs": [
     {
@@ -225,19 +225,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d388df81",
+   "id": "6cd841b3",
    "metadata": {},
    "source": [
     "#### Correlation is a normalized version of the covariance\n",
     "Correlation is a normalized version of the covariance. \n",
     "![](https://miro.medium.com/max/520/1*8C_VvGhYWJFJft8vlmO3sw.png)\n",
-    "By dividing the covariance by the features’ standard deviations, we ensure that the correlation between two features is in the range [-1, 1], which makes it more interpretable than the unbounded covariance."
+    "By dividing the covariance by the features’ standard deviations, we ensure that the correlation between two features is in the range [-1, 1], which makes it more interpretable than the unbounded covariance.\n",
+    "\n",
+    "**Covariance** indicates the direction of the linear relationship between variables.\n",
+    "**Correlation** on the other hand measures both the strength and direction of the linear relationship between two variables."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e7805727",
+   "id": "aa209ca1",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6285d3",
+   "id": "2efd32a9",
    "metadata": {},
    "source": [
     "### Chi square test (Categorical-Categorical)\n",
@@ -278,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6baf4ab4",
+   "id": "7683be1f",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e7a9378",
+   "id": "1239d632",
    "metadata": {},
    "source": [
     "### z-test and t-test (Numerical-Categorical(2 Categories))\n",
@@ -328,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2aeb1a88",
+   "id": "1d7b2524",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c50cff",
+   "id": "894bd911",
    "metadata": {},
    "source": [
     "Here we will consider Gender and ApplicantIncome for z test. \n",
@@ -505,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "016d9d81",
+   "id": "a33a66d3",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08b02279",
+   "id": "f9a4acd1",
    "metadata": {},
    "source": [
     "### Anova test (Continuous - Categorical(3 or more))\n",
@@ -553,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53920c80",
+   "id": "1c798eed",
    "metadata": {},
    "source": [
     "Here, there are four treatments (A, B, C, and D), which are groups for ANOVA analysis. Treatments are independent variable."
@@ -562,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9b3f62d7",
+   "id": "27b379dd",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "24455eec",
+   "id": "1fbe2141",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b93ab5e0",
+   "id": "52f45b5f",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "083f1fc9",
+   "id": "eae86af5",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b52b5a3f",
+   "id": "2bed35ae",
    "metadata": {},
    "source": [
     "The p value obtained from ANOVA analysis is significant (p < 0.05), and therefore, we conclude that there are significant differences among treatments.\n",
@@ -805,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e9bdad29",
+   "id": "a446278e",
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3e6edea",
+   "id": "d6b91f5e",
    "metadata": {},
    "source": [
     "Above results from Tukey’s HSD suggests that except A-C, all other pairwise comparisons for treatments rejects null hypothesis (p < 0.05) and indicates statistical significant differences."
@@ -938,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "449c9450",
+   "id": "1f94f06d",
    "metadata": {},
    "source": [
     "### Two way anova\n",
@@ -953,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "19a22991",
+   "id": "1770d513",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "89166315",
+   "id": "6228b502",
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "37761d15",
+   "id": "789ac707",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e2816e8c",
+   "id": "0d33e8e6",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00241393",
+   "id": "e8cfc40d",
    "metadata": {},
    "source": [
     "The p value obtained from ANOVA analysis for genotype, years, and interaction are statistically significant (p<0.05). We conclude that type of genotype significantly affects the yield outcome, time (years) significantly affects the yield outcome, and interaction of both genotype and time (years) significantly affects the yield outcome."
@@ -1709,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14423299",
+   "id": "60850907",
    "metadata": {},
    "outputs": [],
    "source": []
